work in progress: assessor keeps decompiled code